docs/api/qiskit/0.19/qiskit.providers.aer.extensions.SnapshotProbabilities.mdx
---
title: SnapshotProbabilities (v0.19)
description: API reference for qiskit.providers.aer.extensions.SnapshotProbabilities in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.aer.extensions.SnapshotProbabilities
---

# SnapshotProbabilities

<Class id="qiskit.providers.aer.extensions.SnapshotProbabilities" isDedicatedPage={true} github="https://github.com/qiskit/qiskit-aer/tree/stable/0.5/qiskit/providers/aer/extensions/snapshot_probabilities.py" signature="SnapshotProbabilities(label, num_qubits, variance=False)" modifiers="class">
  Snapshot instruction for all methods of Qasm simulator.

  Create a probability snapshot instruction.

  **Parameters**

  *   **label** (*str*) – the snapshot label.
  *   **num\_qubits** (*int*) – the number of qubits to snapshot.
  *   **variance** (*bool*) – compute variance of probabilities \[Default: False]

  **Raises**

  **ExtensionError** – if snapshot is invalid.

  ## Attributes

  <span id="snapshotprobabilities-decompositions" />

  ### decompositions

  <Attribute id="qiskit.providers.aer.extensions.SnapshotProbabilities.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  <span id="snapshotprobabilities-definition" />

  ### definition

  <Attribute id="qiskit.providers.aer.extensions.SnapshotProbabilities.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  <span id="snapshotprobabilities-label" />

  ### label

  <Attribute id="qiskit.providers.aer.extensions.SnapshotProbabilities.label">
    Return snapshot label
  </Attribute>

  <span id="snapshotprobabilities-params" />

  ### params

  <Attribute id="qiskit.providers.aer.extensions.SnapshotProbabilities.params">
    return instruction params.
  </Attribute>

  <span id="snapshotprobabilities-snapshot-type" />

  ### snapshot\_type

  <Attribute id="qiskit.providers.aer.extensions.SnapshotProbabilities.snapshot_type">
    Return snapshot type
  </Attribute>

  ## Methods

  <span id="snapshotprobabilities-add-decomposition" />

  ### add\_decomposition

  <Function id="qiskit.providers.aer.extensions.SnapshotProbabilities.add_decomposition" signature="SnapshotProbabilities.add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  <span id="snapshotprobabilities-assemble" />

  ### assemble

  <Function id="qiskit.providers.aer.extensions.SnapshotProbabilities.assemble" signature="SnapshotProbabilities.assemble()">
    Assemble a QasmQobjInstruction
  </Function>

  <span id="snapshotprobabilities-broadcast-arguments" />

  ### broadcast\_arguments

  <Function id="qiskit.providers.aer.extensions.SnapshotProbabilities.broadcast_arguments" signature="SnapshotProbabilities.broadcast_arguments(qargs, cargs)">
    Validation of the arguments.

    **Parameters**

    *   **qargs** (*List*) – List of quantum bit arguments.
    *   **cargs** (*List*) – List of classical bit arguments.

    **Yields**

    *Tuple(List, List)* – A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  <span id="snapshotprobabilities-c-if" />

  ### c\_if

  <Function id="qiskit.providers.aer.extensions.SnapshotProbabilities.c_if" signature="SnapshotProbabilities.c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  <span id="snapshotprobabilities-copy" />

  ### copy

  <Function id="qiskit.providers.aer.extensions.SnapshotProbabilities.copy" signature="SnapshotProbabilities.copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="snapshotprobabilities-define-snapshot-register" />

  ### define\_snapshot\_register

  <Function id="qiskit.providers.aer.extensions.SnapshotProbabilities.define_snapshot_register" signature="SnapshotProbabilities.define_snapshot_register(circuit, label, qubits=None)" modifiers="static">
    Defines qubits to snapshot for all snapshot methods
  </Function>

  <span id="snapshotprobabilities-inverse" />

  ### inverse

  <Function id="qiskit.providers.aer.extensions.SnapshotProbabilities.inverse" signature="SnapshotProbabilities.inverse()">
    Special case. Return self.
  </Function>

  <span id="snapshotprobabilities-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.providers.aer.extensions.SnapshotProbabilities.is_parameterized" signature="SnapshotProbabilities.is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  <span id="snapshotprobabilities-mirror" />

  ### mirror

  <Function id="qiskit.providers.aer.extensions.SnapshotProbabilities.mirror" signature="SnapshotProbabilities.mirror()">
    For a composite instruction, reverse the order of sub-gates.

    This is done by recursively mirroring all sub-instructions. It does not invert any gate.

    **Returns**

    a fresh gate with sub-gates reversed

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="snapshotprobabilities-qasm" />

  ### qasm

  <Function id="qiskit.providers.aer.extensions.SnapshotProbabilities.qasm" signature="SnapshotProbabilities.qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  <span id="snapshotprobabilities-repeat" />

  ### repeat

  <Function id="qiskit.providers.aer.extensions.SnapshotProbabilities.repeat" signature="SnapshotProbabilities.repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>
</Class>

